--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Stanley Wanekeya // @stanleywanekeya on github
+Rachael Anne Waiyuyu Rachael // @annerachael on github
