--- a/AUTHORS
+++ b/AUTHORS
@@ -2,5 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
-Bamidele Adefolaju <bamideleadefolaju@gmail.com>
-Mercy Akinwunmi <mercyakinwumi36@gmail.com>
+Stanley Wanekeya // @stanleywanekeya on github
+Rachael Anne Waiyuyu Rachael // @annerachael on github
